--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Yourdoctor</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>YourDoctors</title>
+  <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <%= yield :head %>
 </head>
 <body>
+<div id="wrap">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/"><img class="img-responsive" src="assets/logo.jpeg" width="100px;"></a>
+    </div>
 
-<%= yield %>
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+      <ul class="nav navbar-nav navbar-right navbar-user">
+        <li><%= link_to "Doctors", doctors_path %></li>
+        <li><%= link_to "Hospitals", hospitals_url %></li>
+        <%= render partial: 'layouts/user_navigation' %>
+      </ul>
+    </div>
+  </nav>
 
+  <div class="container" style="margin-top:50px">
+    <%= bootstrap_flash %>
+    <%= yield %>
+  </div>
+  <div id="push"></div>
+</div>
+
+<div id="footer">
+  <div class="container">
+    <p>© Company 2014</p>
+  </div>
+</div>
 </body>
 </html>
+
