--- a/app/views/hospitals/_form.html.erb
+++ b/app/views/hospitals/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@hospital) do |f| %>
+<%= simple_form_for(@hospital, wrapper: :horizontal_form) do |f| %>
     <%= f.error_notification %>
 
     <div class="form-inputs">
