--- a/app/views/rates/edit.html.erb
+++ b/app/views/rates/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @rate %> |
-<%= link_to 'Back', rates_path %>
+<%= link_to 'Show', doctor_rates_path(@doctor, @rate) %>
