--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,79 +1,56 @@
-<p id="notice"><%= notice %></p>
+<div class="jumbotron">
+  <h2>Doctor's Profile!</h2>
 
-<p>
-  <strong>Name:</strong>
-  <%= @doctor.name %>
-</p>
+  <p>
+    <strong>Name:</strong>
+    <%= @doctor.name %>
+  </p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @doctor.title %>
-</p>
+  <p>
+    <strong>Title:</strong>
+    <%= @doctor.title %>
+  </p>
 
-<p>
-  <strong>Degrees:</strong>
-  <%= @doctor.degrees %>
-</p>
+  <p>
+    <strong>Degrees:</strong>
+    <%= @doctor.degrees %>
+  </p>
 
-<p>
-  <strong>Education:</strong>
-  <%= @doctor.education %>
-</p>
+  <p>
+    <strong>Education:</strong>
+    <%= @doctor.education %>
+  </p>
 
-<p>
-  <strong>Specialist:</strong>
-  <%= @doctor.specialist %>
-</p>
+  <p>
+    <strong>Specialist:</strong>
+    <%= @doctor.specialist %>
+  </p>
 
-<p>
-  <strong>Age:</strong>
-  <%= @doctor.age %>
-</p>
+  <p>
+    <strong>Email:</strong>
+    <%= @doctor.email %>
+  </p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @doctor.email %>
-</p>
+  <p>
+    <strong>Phone:</strong>
+    <%= @doctor.phone %>
+  </p>
 
-<p>
-  <strong>Phone:</strong>
-  <%= @doctor.phone %>
-</p>
+  <p>
+    <strong>About me:</strong>
+    <%= @doctor.about_me %>
+  </p>
 
-<p>
-  <strong>Address:</strong>
-  <%= @doctor.address %>
-</p>
+</div>
 
-<p>
-  <strong>City:</strong>
-  <%= @doctor.city %>
-</p>
-
-<p>
-  <strong>Thana:</strong>
-  <%= @doctor.thana_id %>
-</p>
-
-<p>
-  <strong>District:</strong>
-  <%= @doctor.district_id %>
-</p>
-
-<p>
-  <strong>Country:</strong>
-  <%= @doctor.cuntry %>
-</p>
-
-<p>
-  <strong>About me:</strong>
-  <%= @doctor.about_me %>
-</p>
-
-<p>
-  <strong>Type:</strong>
-  <%= @doctor.type %>
-</p>
-
-<%= link_to 'Edit', edit_doctor_path(@doctor) %> |
-<%= link_to 'Back', doctors_path %>
+<div class="row">
+  <div class="col-lg-4">
+    <%= link_to 'Edit Profile »', edit_doctor_path(@doctor), class: "btn btn-primary btn-lg btn-block" %>
+  </div>
+  <div class="col-lg-4">
+    <%= link_to 'Add Rates »', new_doctor_rate_path(@doctor), class: "btn btn-primary btn-lg btn-block" %>
+  </div>
+  <div class="col-lg-4">
+    <%= link_to 'Add Availability »', new_doctor_availability_path(@doctor), class: "btn btn-primary btn-lg btn-block" %>
+  </div>
+</div>
