--- a/app/views/rates/_form.html.erb
+++ b/app/views/rates/_form.html.erb
@@ -1,13 +1,12 @@
-<%= simple_form_for(@rate) do |f| %>
-  <%= f.error_notification %>
+<%#= simple_form_for(@rate, :url => doctor_rates_path, wrapper: :horizontal_form) do |f| %>
+<%= simple_form_for([@doctor, @rate], wrapper: :horizontal_form) do |f| %>
 
-  <div class="form-inputs">
-    <%= f.input :new_patient %>
-    <%= f.input :old_patient %>
-    <%= f.input :doctor_id %>
-  </div>
+    <div class="form-inputs">
+      <%= f.input :new_patient %>
+      <%= f.input :old_patient %>
+    </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+    <div class="form-actions">
+      <%= f.button :submit %>
+    </div>
 <% end %>
