--- a/app/views/availabilities/index.html.erb
+++ b/app/views/availabilities/index.html.erb
@@ -2,32 +2,30 @@
 
 <table>
   <thead>
-    <tr>
-      <th>Hospital</th>
-      <th>Start at</th>
-      <th>End at</th>
-      <th>Day off</th>
-      <th>Doctor</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Hospital</th>
+    <th>Start at</th>
+    <th>End at</th>
+    <th>Day off</th>
+    <th colspan="3"></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @availabilities.each do |availability| %>
+  <% @availabilities.each do |availability| %>
       <tr>
         <td><%= availability.hospital_id %></td>
         <td><%= availability.start_at %></td>
         <td><%= availability.end_at %></td>
         <td><%= availability.day_off %></td>
-        <td><%= availability.doctor_id %></td>
-        <td><%= link_to 'Show', availability %></td>
-        <td><%= link_to 'Edit', edit_availability_path(availability) %></td>
-        <td><%= link_to 'Destroy', availability, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', doctor_availability_path(@doctor, availability) %></td>
+        <td><%= link_to 'Edit', edit_doctor_availability_path(@doctor, availability) %></td>
+        <td><%= link_to 'Destroy', doctor_availability_path(@doctor, availability), method: :delete, data: {confirm: 'Are you sure?'} %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Availability', new_availability_path %>
+<%= link_to 'New Availability', new_doctor_availability_path(@doctor) %>
