--- a/app/views/availabilities/show.html.erb
+++ b/app/views/availabilities/show.html.erb
@@ -20,10 +20,5 @@
   <%= @availability.day_off %>
 </p>
 
-<p>
-  <strong>Doctor:</strong>
-  <%= @availability.doctor_id %>
-</p>
 
-<%= link_to 'Edit', edit_availability_path(@availability) %> |
-<%= link_to 'Back', availabilities_path %>
+<%= link_to 'Edit', edit_doctor_availability_path(@doctor, @availability) %>
