--- a/app/views/availabilities/edit.html.erb
+++ b/app/views/availabilities/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @availability %> |
-<%= link_to 'Back', availabilities_path %>
+<%= link_to 'Show', doctor_rates_path(@doctor, @availability) %>
