Create  doctors listing page

--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -9,6 +9,7 @@
       <%= f.input :specialist %>
       <%= f.input :email %>
       <%= f.input :phone %>
+      <%= f.input :city %>
       <%= f.input :about_me %>
       <%= f.input :password, required: true %>
       <%= f.input :password_confirmation, required: true %>
