--- a/app/views/rates/show.html.erb
+++ b/app/views/rates/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>title:</strong>
+  <%= @rate.title %>
+</p>
+
+<p>
   <strong>New patient:</strong>
   <%= @rate.new_patient %>
 </p>
