--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,52 +1,51 @@
-<h1>Listing doctors</h1>
+<h1>Doctors</h1>
+<div class="row">
+  <% @doctors.each do |doctor| %>
+      <div class="col-lg-12">
+        <div class="col-lg-2">
+          <img alt="User Pic" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=100" class="img-circle">
+        </div>
+        <div class="col-lg-6">
+          <div class="header">
+            <p><%= link_to "#{doctor.title} #{doctor.name}", doctor_path(doctor), style: 'font-size: 23px; font-weight: 600; color: #009fdb;' %></p>
+            <i style="font-size: 15px;"><%= doctor.degrees %></i>
+            <p style="font-size: 17px; font-weight: 400"><%= doctor.specialist %></p>
+            <p><%= doctor.about_me %></p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Title</th>
-      <th>Degrees</th>
-      <th>Education</th>
-      <th>Specialist</th>
-      <th>Age</th>
-      <th>Email</th>
-      <th>Phone</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Thana</th>
-      <th>District</th>
-      <th>Country</th>
-      <th>About me</th>
-      <th>Type</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+            <span class="glyphicon glyphicon-phone" aria-hidden="true"><%= doctor.phone %></span> |
+            <span class="glyphicon glyphicon-envelope" aria-hidden="true"><%= doctor.email %></span> |
+            <span class="glyphicon glyphicon-map-marker" aria-hidden="true"><%= doctor.city %></span>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <table class="table table-bordered">
+            <thead>
+            <tr>
+              <th>Hospital</th>
+              <th>Start</th>
+              <th>End</th>
+              <th>Off</th>
+            </tr>
+            </thead>
 
-  <tbody>
-    <% @doctors.each do |doctor| %>
-      <tr>
-        <td><%= doctor.name %></td>
-        <td><%= doctor.title %></td>
-        <td><%= doctor.degrees %></td>
-        <td><%= doctor.education %></td>
-        <td><%= doctor.specialist %></td>
-        <td><%= doctor.age %></td>
-        <td><%= doctor.email %></td>
-        <td><%= doctor.phone %></td>
-        <td><%= doctor.address %></td>
-        <td><%= doctor.city %></td>
-        <td><%= doctor.thana_id %></td>
-        <td><%= doctor.district_id %></td>
-        <td><%= doctor.cuntry %></td>
-        <td><%= doctor.about_me %></td>
-        <td><%= doctor.type %></td>
-        <td><%= link_to 'Show', doctor %></td>
-        <td><%= link_to 'Edit', edit_doctor_path(doctor) %></td>
-        <td><%= link_to 'Destroy', doctor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+            <% doctor.availabilities.each do |availability| %>
+                <tr>
+                  <td><%= link_to availability.hospital.name, hospital_path(availability.hospital) %></td>
+                  <td><%= availability.start_at %></td>
+                  <td><%= availability.end_at %></td>
+                  <td> <%= availability.day_off %></td>
+                </tr>
+            <% end %>
+          </table>
+        </div>
+      </div>
+      <div class="col-xs-12"><hr></div>
+
+      <%#= link_to 'Show', doctor %>
+      <%#= link_to 'Edit', edit_doctor_path(doctor) %>
+      <%#= link_to 'Destroy', doctor, method: :delete, data: {confirm: 'Are you sure?'} %>
+  <% end %>
+</div>
 
 <br>
 
