--- a/app/views/rates/index.html.erb
+++ b/app/views/rates/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <thead>
     <tr>
+      <th>title</th>
       <th>New patient</th>
       <th>Old patient</th>
       <th colspan="3"></th>
@@ -12,6 +13,7 @@
   <tbody>
     <% @rates.each do |rate| %>
       <tr>
+        <td><%= rate.title %></td>
         <td><%= rate.new_patient %></td>
         <td><%= rate.old_patient %></td>
         <td><%= link_to 'Show', doctor_rate_path(@doctor, rate) %></td>
