--- a/app/views/hospitals/_form.html.erb
+++ b/app/views/hospitals/_form.html.erb
@@ -3,6 +3,8 @@
 
     <div class="form-inputs">
       <%= f.input :name %>
+      <%= f.input :phone %>
+      <%= f.input :email %>
       <%= f.input :address %>
       <%= f.input :city %>
       <%= f.input :division_id, collection: Division.all.collect { |c| [c.name, c.id] }, prompt: 'Please select Division', required: true %>
