Refactoring old code

--- a/app/views/hospitals/index.html.erb
+++ b/app/views/hospitals/index.html.erb
@@ -44,4 +44,4 @@
 
 <br>
 
-<%= link_to 'New Hospital', new_hospital_path %>
+<%= link_to 'New Hospital', new_hospital_path, class: 'btn btn-primary' %>
