--- a/app/views/availabilities/index.html.erb
+++ b/app/views/availabilities/index.html.erb
@@ -1,13 +1,13 @@
-<h1>Listing availabilities</h1>
+<h1>Availabilities</h1>
 
-<table>
+<table class="table table-bordered">
   <thead>
   <tr>
     <th>Hospital</th>
     <th>Start at</th>
     <th>End at</th>
     <th>Day off</th>
-    <th colspan="3"></th>
+    <th colspan="3">Actions</th>
   </tr>
   </thead>
 
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Availability', new_doctor_availability_path(@doctor) %>
+<%= link_to 'New Availability', new_doctor_availability_path(@doctor), class: 'btn btn-primary' %>
