--- a/app/views/rates/index.html.erb
+++ b/app/views/rates/index.html.erb
@@ -1,29 +1,29 @@
-<h1>Listing rates</h1>
+<h1>Rates</h1>
 
-<table>
+<table class="table table-bordered">
   <thead>
-    <tr>
-      <th>title</th>
-      <th>New patient</th>
-      <th>Old patient</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>title</th>
+    <th>New patient</th>
+    <th>Old patient</th>
+    <th colspan="3">Actions</th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @rates.each do |rate| %>
+  <% @rates.each do |rate| %>
       <tr>
         <td><%= rate.title %></td>
         <td><%= rate.new_patient %></td>
         <td><%= rate.old_patient %></td>
         <td><%= link_to 'Show', doctor_rate_path(@doctor, rate) %></td>
         <td><%= link_to 'Edit', edit_doctor_rate_path(@doctor, rate) %></td>
-        <td><%= link_to 'Destroy', doctor_rate_path(@doctor, rate), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', doctor_rate_path(@doctor, rate), method: :delete, data: {confirm: 'Are you sure?'} %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Rate',  new_doctor_rate_path(@doctor) %>
+<%= link_to 'New Rate', new_doctor_rate_path(@doctor), class: 'btn btn-primary' %>
