--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,8 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right navbar-user">
         <li><%= link_to "Doctors", doctors_path %></li>
-        <li><%= link_to "Hospitals", hospitals_url %></li>
+        <li><%= link_to "Hospitals", hospitals_path %></li>
+        <li><%= link_to "Patients", patients_path %></li>
         <%= render partial: 'layouts/user_navigation' %>
       </ul>
     </div>
