--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -2,22 +2,23 @@
 
 <table class="table table-bordered">
   <thead>
-    <tr>
-      <th>Name</th>
-      <th>Age</th>
-      <th>Email</th>
-      <th>Phone</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Thana</th>
-      <th>District</th>
-      <th>Country</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Name</th>
+    <th>Age</th>
+    <th>Email</th>
+    <th>Phone</th>
+    <th>Address</th>
+    <th>City</th>
+    <th>Thana</th>
+    <th>District</th>
+    <th>Country</th>
+    <th>Division</th>
+    <th colspan="2"></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @patients.each do |patient| %>
+  <% @patients.each do |patient| %>
       <tr>
         <td><%= patient.name %></td>
         <td><%= patient.age %></td>
@@ -25,14 +26,14 @@
         <td><%= patient.phone %></td>
         <td><%= patient.address %></td>
         <td><%= patient.city %></td>
-        <td><%= patient.thana_id %></td>
-        <td><%= patient.district_id %></td>
+        <td><%= patient.thana.try(:name) %></td>
+        <td><%= patient.district.try(:name) %></td>
+        <td><%= patient.division.try(:name) %></td>
         <td><%= patient.cuntry %></td>
-        <td><%= link_to 'Show', patient %></td>
         <td><%= link_to 'Edit', edit_patient_path(patient) %></td>
-        <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', patient, method: :delete, data: {confirm: 'Are you sure?'} %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
