--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><img class="img-responsive" src="assets/logo.jpeg" width="100px;"></a>
+      <a class="navbar-brand" href="/"><%= image_tag "logo.jpeg", class: "img-responsive", width: "100px;" %></a>
+
     </div>
 
     <div class="collapse navbar-collapse navbar-ex1-collapse">
