--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -9,8 +9,6 @@
     <th>Phone</th>
     <th>Address</th>
     <th>City</th>
-    <th>Thana</th>
-    <th>District</th>
     <th>Country</th>
     <th>Division</th>
     <th colspan="2"></th>
@@ -25,10 +23,7 @@
         <td><%= patient.email %></td>
         <td><%= patient.phone %></td>
         <td><%= patient.address %></td>
-        <td><%= patient.city %></td>
-        <td><%= patient.thana.try(:name) %></td>
-        <td><%= patient.district.try(:name) %></td>
-        <td><%= patient.division.try(:name) %></td>
+        <td><%= patient.city.try(:name) %></td>
         <td><%= patient.cuntry %></td>
         <td><%= link_to 'Edit', edit_patient_path(patient) %></td>
         <td><%= link_to 'Destroy', patient, method: :delete, data: {confirm: 'Are you sure?'} %></td>
