--- a/app/views/hospitals/_form.html.erb
+++ b/app/views/hospitals/_form.html.erb
@@ -6,18 +6,7 @@
       <%= f.input :phone %>
       <%= f.input :email %>
       <%= f.input :address %>
-      <%= f.input :city %>
-      <%= f.input :division_id, collection: Division.all.collect { |c| [c.name, c.id] }, prompt: 'Please select Division', required: true %>
-      <%= f.input :district_id, :input_html => {'data-option-dependent' => true,
-                                                'data-option-url' => '/locations/districts?division_id=:hospital_division_id',
-                                                'data-option-observed' => 'hospital_division_id'}, prompt: 'Please select District',
-                  collection: (f.object.division ? f.object.division.districts.collect { |district| [district.name, district.id] } : [])
-      %>
-      <%= f.input :thana_id, :input_html => {'data-option-dependent' => true,
-                                             'data-option-url' => '/locations/thanas?district_id=:hospital_district_id',
-                                             'data-option-observed' => 'hospital_district_id'}, prompt: 'Please select Thana',
-                  collection: (f.object.division ? f.object.district.thanas.collect { |thana| [thana.name, thana.id] } : [])
-      %>
+      <%= f.input :city_id, collection: City.all.collect { |c| [c.name, c.id] }, prompt: 'Please select City', required: true %>
       <%= f.input :cuntry, :input_html => {:value => f.object.cuntry || 'Bangladesh'}, label: "Country" %>
     </div>
 
