--- a/app/views/layouts/_user_navigation.html.erb
+++ b/app/views/layouts/_user_navigation.html.erb
@@ -6,8 +6,14 @@
       </a>
       <ul class="dropdown-menu">
         <li>
-          <%= link_to edit_user_registration_path(current_user) do %>
-              <i class="glyphicon glyphicon-user"></i> Profile
+          <% if current_user.is_a?(Doctor) %>
+              <%= link_to edit_doctor_path(current_user) do %>
+                  <i class="glyphicon glyphicon-user"></i> Profile
+              <% end %>
+          <% elsif current_user.is_a?(Patient) %>
+              <%= link_to edit_patient_path(current_user) do %>
+                  <i class="glyphicon glyphicon-user"></i> Profile
+              <% end %>
           <% end %>
         </li>
         <li>
@@ -21,6 +27,11 @@
     <li>
       <%= link_to user_session_path do %>
           <i class="glyphicon glyphicon-log-in"></i> Login
+      <% end %>
+    </li>
+    <li>
+      <%= link_to new_user_registration_path do %>
+          <i class="glyphicon glyphicon-pencil"></i> Register
       <% end %>
     </li>
 <% end %>
