--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
       <%= f.input :email, required: true %>
       <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
       <%= f.input :password_confirmation, required: true %>
-      <%= f.input :type, as: :radio_buttons, collection: [['Doctor', 'Doctor'], ['Patient', 'Patient']], wrapper: :horizontal_radio_and_checkboxes %>
+      <%= f.input :type, as: :radio_buttons, collection: [['Doctor', 'Doctor'], ['Patient', 'Patient'], ['HospitalAuthority', 'HospitalAuthority']], wrapper: :horizontal_radio_and_checkboxes %>
     </div>
 
     <div class="form-actions">
