--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,95 +1,5 @@
-<div class="jumbotron row">
-  <div class="col-lg-4">
-    <h2><%= link_to 'Edit Profile »', edit_doctor_path(@doctor) %> </h2>
-    <table class="table table-bordered">
-      <tr>
-        <th>Title</th>
-        <td><%= @doctor.title %></td>
-      </tr>
-      <tr>
-        <th>Name</th>
-        <td><%= @doctor.name %></td>
-      </tr>
-      <tr>
-        <th>Degrees</th>
-        <td><%= @doctor.degrees %></td>
-      </tr>
-      <tr>
-        <th>Education</th>
-        <td><%= @doctor.education %></td>
-      </tr>
-      <tr>
-        <th>Specialist</th>
-        <td><%= @doctor.specialist %></td>
-      </tr>
-      <tr>
-        <th>Email</th>
-        <td><%= @doctor.email %></td>
-      </tr>
-      <tr>
-        <th>Phone</th>
-        <td><%= @doctor.phone %></td>
-      </tr>
-      <tr>
-        <th>About Me</th>
-        <td><%= @doctor.about_me %></td>
-      </tr>
-    </table>
-  </div>
-
-  <div class="col-lg-4">
-    <h2><%= link_to "Rates!", doctor_rates_path(@doctor) %> </h2>
-    <table class="table table-bordered">
-      <thead>
-      <tr>
-        <th>Title</th>
-        <th>New Patients</th>
-        <th>Old Patients</th>
-      </tr>
-      </thead>
-
-      <% @doctor.rates.each do |rate| %>
-          <tr>
-            <td><%= rate.title %></td>
-            <td>BDT <%= rate.new_patient %></td>
-            <td>BDT <%= rate.old_patient %></td>
-          </tr>
-      <% end %>
-    </table>
-  </div>
-
-  <div class="col-lg-4">
-    <h2><%= link_to "Availabilities!", doctor_availabilities_path(@doctor) %> </h2>
-    <table class="table table-bordered">
-      <thead>
-      <tr>
-        <th>Hospital</th>
-        <th>Start</th>
-        <th>End</th>
-        <th>Off</th>
-      </tr>
-      </thead>
-
-      <% @doctor.availabilities.each do |availability| %>
-          <tr>
-            <td><%= link_to availability.hospital.name, hospital_path(availability.hospital) %></td>
-            <td><%= availability.start_at %></td>
-            <td><%= availability.end_at %></td>
-            <td> <%= availability.day_off %></td>
-          </tr>
-      <% end %>
-    </table>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-lg-4">
-    <%= link_to 'Edit Profile »', edit_doctor_path(@doctor), class: "btn btn-primary btn-lg btn-block" %>
-  </div>
-  <div class="col-lg-4">
-    <%= link_to 'Add Rates »', new_doctor_rate_path(@doctor), class: "btn btn-primary btn-lg btn-block" %>
-  </div>
-  <div class="col-lg-4">
-    <%= link_to 'Add Availability »', new_doctor_availability_path(@doctor), class: "btn btn-primary btn-lg btn-block" %>
-  </div>
-</div>
+<% if current_user.present? && current_user.id == @doctor.id %>
+    <%= render :partial => 'doctors/personal_profile' %>
+<% else %>
+    <%= render :partial => 'doctors/public_profile' %>
+<% end %>
