--- a/app/views/hospitals/_form.html.erb
+++ b/app/views/hospitals/_form.html.erb
@@ -8,6 +8,7 @@
       <%= f.input :address %>
       <%= f.input :city_id, collection: City.all.collect { |c| [c.name, c.id] }, prompt: 'Please select City', required: true %>
       <%= f.input :cuntry, :input_html => {:value => f.object.cuntry || 'Bangladesh'}, label: "Country" %>
+      <%= f.hidden_field :hospital_authority_id, value: current_user.id %>
     </div>
 
     <div class="form-actions">
