--- a/app/views/hospital_authorities/edit.html.erb
+++ b/app/views/hospital_authorities/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing hospital_authority</h1>
+<h1>Editing Hospital Authority</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @hospital_authority %> |
-<%= link_to 'Back', hospital_authorities_path %>
