--- a/app/views/hospital_authorities/index.html.erb
+++ b/app/views/hospital_authorities/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Listing hospital_authorities</h1>
+<h1>Hospital Authorities</h1>
 
-<table>
-  <thead class="table">
+<table class="table table-bordered">
+  <thead>
   <tr>
     <th>Name</th>
     <th>Email</th>
