--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -10,15 +10,13 @@
     <th>Address</th>
     <th>City</th>
     <th>Country</th>
-    <th>Division</th>
-    <th colspan="2"></th>
   </tr>
   </thead>
 
   <tbody>
   <% @patients.each do |patient| %>
       <tr>
-        <td><%= patient.name %></td>
+        <td><%= link_to patient.name, patient %></td>
         <td><%= patient.age %></td>
         <td><%= patient.email %></td>
         <td><%= patient.phone %></td>
